解决： 1. 照片墙

--- a/index.html
+++ b/index.html
@@ -137,6 +137,20 @@
                 </ul>
             </section>
         </li>
+        <li>
+            <section class="stage stage-save flex flex-direction_column flex-justify_center flex-align_center">
+                <div>
+                    <img src="">
+                </div>
+                <span class="words word-save_title translate_centerX">长按保存图片 晒出你的美</span>
+            </section>
+        </li>
+        <li>
+            <section class="stage stage-wall">
+                <span class="words word-wall_title">照片墙个人海报</span>
+                <div class="wall-list flex flex-wrap_wrap flex-justify_center"><!-- js create elem --></div>
+            </section>
+        </li>
     </ul>
     <img id="say" src="" />
     <img id="avatar" src="" />
