解决： 1. 活动规则

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/plugins/swiper.min.css" />
     <link rel="stylesheet" href="css/public/common.css" />
     <link rel="stylesheet" href="css/views/index.css" />
+    <script src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
     <script src="js/libs/zepto.min.js"></script>
     <script src="js/plugins/flexible.js"></script>
     <script src="js/plugins/swiper.min.js"></script>
@@ -139,6 +140,8 @@
         </li>
         <li>
             <section class="stage stage-save flex flex-direction_column flex-justify_center flex-align_center">
+                <a class="btns btn-photoWall" href="javascript:;">照片墙</a>
+                <a class="btns btn-restart" href="javascript:;">再玩一次</a>
                 <div>
                     <img src="">
                 </div>
@@ -148,6 +151,7 @@
         <li>
             <section class="stage stage-wall">
                 <span class="words word-wall_title">照片墙个人海报</span>
+                <a class="btns btn-home" href="javascript:;">首页</a>
                 <div class="wall-list flex flex-wrap_wrap flex-justify_center"><!-- js create elem --></div>
             </section>
         </li>
@@ -216,10 +220,10 @@
                 <p>一等奖：第1名</p>
                 <p>价值5000元SEAISEE水下魅力写真拍摄一组</p>
                 <div class="rule-banner">
-                    <img src="images/pic-prize1_banner2.jpg" alt="一等奖：价值5000元SEAISEE水下魅力写真拍摄一组" />
-                    <img class="rule-banner_anim" src="images/pic-prize1_banner1.jpg" alt="一等奖：价值5000元SEAISEE水下魅力写真拍摄一组" />
+                    <img class="active" src="images/pic-prize1_banner2.jpg" alt="一等奖：价值5000元SEAISEE水下魅力写真拍摄一组" />
+                    <img src="images/pic-prize1_banner1.jpg" alt="一等奖：价值5000元SEAISEE水下魅力写真拍摄一组" />
                     <ul class="flex flex-justify_center flex-align_center">
-                        <li></li>
+                        <li class="active"></li>
                         <li></li>
                     </ul>
                 </div>
@@ -258,7 +262,7 @@
     </div>
     <script src="js/public/common.js"></script>
     <script src="js/views/index.js"></script>
-    <script src="js/plugins/jsonToCss.js"></script>
-</body>
+
+</html>
 
 </html>
