解决： 1. 代码同步

--- a/index.html
+++ b/index.html
@@ -263,8 +263,13 @@
             <div class="pop-loading_box flex flex-justify_center flex-align_center">
                 <dl class="flex flex-justify_center flex-align_center">
                     <dt><span class="words word-loading_title"></span></dt>
-                    <dd><</dd>
+                    <dd class="animation-loading"></dd>
                 </dl>
+            </div>
+        </section>
+        <section class="pop-error" data-close=".pop-error">
+            <div class="pop-error_box flex flex-justify_center flex-align_center">
+                <span class="words word-tips_error">Opps，您的图片无法识别试试背景更干净的美照吧~</span>
             </div>
         </section>
     </div>
