解决： 1. 新增光标 2. 照片墙 个人海报切换显示

--- a/index.html
+++ b/index.html
@@ -150,14 +150,21 @@
         </li>
         <li>
             <section class="stage stage-wall">
-                <span class="words word-wall_title">照片墙个人海报</span>
+                <ul class="tab flex flex-justify_center flex-align_center">
+                    <li><span class="btns btn-photoWall_disable">照片墙</span></li>
+                    <li><a class="btns btn-playbill" href="javascript:;" title="个人海报">个人海报</a></li>
+                </ul>
                 <a class="btns btn-home" href="javascript:;">首页</a>
                 <div class="wall-list flex flex-wrap_wrap flex-justify_center"><!-- js create elem --></div>
             </section>
         </li>
         <li>
             <section class="stage stage-playbill flex flex-direction_column flex-justify_center flex-align_center">
-                <a class="btns btn-photoWall" href="javascript:;">照片墙</a>
+                <ul class="tab flex flex-justify_center flex-align_center">
+                    <li><a class="btns btn-photoWall_disable" href="javascript:;" title="照片墙">照片墙</a></li>
+                    <li><span class="btns btn-playbill" title="个人海报">个人海报</span></li>
+                </ul>
+                <a class="btns btn-home" href="javascript:;">首页</a>
                 <div class="swiper-container">
                     <div class="swiper-wrapper"><!-- js create elem --></div>
                 </div>
