解决： 1. 首页交互效果

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             <div class="scene-flipper_front">
                 <section class="stage stage-landing flex flex-direction_column flex-justify_between flex-align_center">
                     <a class="btns btn-photoWall" href="javascript:;">照片墙</a>
+                    <a class="btns btn-rule" href="javascript:;">活动规则</a>
                     <h2 class="words word-landing_title">晒出最美泳姿 赢迪卡侬大奖</h2>
                     <ul class="flex flex-justify_center flex-align_center">
                         <li><a class="btns btn-start" href="javascript:;">晒照赢奖</a></li>
                         <li><a class="btns btn-buy" href="javascript:;">购买泳衣</a></li>
                     </ul>
-                    <a class="btns btn-rule translate_centerX" href="javascript:;">活动规则</a>
                 </section>
             </div>
             <div class="scene-flipper_back">
@@ -49,12 +49,12 @@
         <li>
             <section class="stage stage-landing flex flex-direction_column flex-justify_between flex-align_center">
                 <a class="btns btn-photoWall" href="javascript:;">照片墙</a>
+                <a class="btns btn-rule" href="javascript:;">活动规则</a>
                 <h2 class="words word-landing_title">晒出最美泳姿 赢迪卡侬大奖</h2>
                 <ul class="flex flex-justify_center flex-align_center">
                     <li><a class="btns btn-start" href="javascript:;">晒照赢奖</a></li>
                     <li><a class="btns btn-buy" href="javascript:;">购买泳衣</a></li>
                 </ul>
-                <a class="btns btn-rule translate_centerX" href="javascript:;">活动规则</a>
             </section>
         </li>
         <li>
@@ -202,25 +202,7 @@
         </section>
         <section class="pop-rule">
             <div class="pop-rule_box">
-                <h2>活动规则</h2>
-                <h3 class="flex flex-justify_center flex-align_center"><i class="icons icon-time"></i><span>活动时间</span></h3>
-                <p>5月10日—7月31日期间，活动分为2个阶段。</p>
-                <h3 class="flex flex-justify_center flex-align_center"><i class="icons icon-time"></i><span>参与方式</span></h3>
-                <dl>
-                    <dt>第一阶段（5.10-7.14）【晒照互动】：</dt>
-                    <dd>1.上传穿着迪卡侬暗夜精灵泳衣的照片，选择心仪模板，可生成个性泳装海报，保存海报即可晒出。</dd>
-                    <dd><span>（*特别说明：穿着其他服装也可参与晒图互动，但不具备后期领奖资格）</span></dd>
-                </dl>
-                <dl>
-                    <dt>第二阶段（7.15-7.31）【投票开启】：</dt>
-                    <dd>1.点击首页“照片墙”，进入个人海报页并分享该页面链接，即可邀请好友点赞投票。</dd>
-                    <dd>2.截至北京时间2019年7月31日24时止，点赞排名前6位的用户，可获得迪卡侬送出的相应奖品。</dd>
-                    <dd><span>（*每个微信ID仅可中奖1次，本次活动仅限中国大陆地区消</span></dd>
-                </dl>
-                <p>
-                    <input type="checkbox" id="agreement" name="agreement" />
-                    <label class="flex flex-justify_center flex-align_center" for="agreement"><i class="icons"></i><span>同意迪卡侬使用上传照片用于商业宣传 (如同意请勾选)</span></label>
-                </p>
+                <h2>活动大奖</h2>
                 <h3 class="flex flex-justify_center flex-align_center"><i class="icons icon-prize"></i><span>活动奖品设置</span></h3>
                 <p>一等奖：第1名</p>
                 <p>价值5000元SEAISEE水下魅力写真拍摄一组</p>
@@ -255,12 +237,33 @@
                 <p>三等奖：第4-6名</p>
                 <p>价值 1000元迪卡侬清凉一夏礼品卡一张，共计三名。</p>
                 <div class="rule-pic"><img src="images/pic-prize3.jpg" alt="价值 1000元迪卡侬清凉一夏礼品卡一张，共计三名。" /></div>
+                <h3 class="flex flex-justify_center flex-align_center"><i class="icons icon-time"></i><span>活动时间</span></h3>
+                <p>5月10日—7月31日期间，活动分为2个阶段。</p>
+                <h3 class="flex flex-justify_center flex-align_center"><i class="icons icon-time"></i><span>参与方式</span></h3>
+                <dl>
+                    <dt>第一阶段（5.10-7.14）【晒照互动】：</dt>
+                    <dd>1.上传穿着迪卡侬暗夜精灵泳衣的照片，选择心仪模板，可生成个性泳装海报，保存海报即可晒出。</dd>
+                    <dd><span>（*特别说明：穿着其他服装也可参与晒图互动，但不具备后期领奖资格）</span></dd>
+                </dl>
+                <dl>
+                    <dt>第二阶段（7.15-7.31）【投票开启】：</dt>
+                    <dd>1.点击首页“照片墙”，进入个人海报页并分享该页面链接，即可邀请好友点赞投票。</dd>
+                    <dd>2.截至北京时间2019年7月31日24时止，点赞排名前6位的用户，可获得迪卡侬送出的相应奖品。</dd>
+                    <dd><span>（*每个微信ID仅可中奖1次，本次活动仅限中国大陆地区消</span></dd>
+                </dl>
+                <p>
+                    <input type="checkbox" id="agreement" name="agreement" />
+                    <label class="flex flex-justify_center flex-align_center" for="agreement"><i class="icons"></i><span>同意迪卡侬使用上传照片用于商业宣传 (如同意请勾选)</span></label>
+                </p>
                 <h3 class="flex flex-justify_center flex-align_center"><i class="icons icon-notice"></i><span>获奖须知</span></h3>
                 <ul>
                     <li>1、中奖中户需如实填写信息，如信息填写错误或在3个工作日内未填写，则视为自动放弃。</li>
                     <li>2、第1-3名中奖用户，迪卡侬将在收到信息后的10个工作日内与您联系领奖。</li>
                     <li>3、第4-6名中奖用户，迪卡侬将在收到正确收货信息后的10个工作日内为您寄出礼品。</li>
                 </ul>
+            </div>
+            <div class="pop-rule_btn flex flex-justify_center flex-align_center">
+                <a class="btns btn-pop_start" href="javascript:;">晒照赢奖</a>
             </div>
             <a class="btns btn-close btn-pop_close" href="javascript:;" title="关闭" data-close=".pop-rule">关闭</a>
         </section>
