解决： 1. 更新活动规则文案

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <p>2.<strong>使用时间：</strong>截止2019年8月15日止, 具体拍摄时间由获奖用户与迪卡侬官方协商决定。</p>
                     <p>3.获奖者为上海地区居民，选择迪卡侬指定交通方式, 则个人往返费用由迪卡侬承担。若获奖者为上海地区外居民, 选择迪卡侬指定交通及住宿方式，则个人往返费用及住宿费用（一晚）由迪卡侬承担。</p>
                     <p>4.拍摄时须潜入水中, 获奖者需熟悉水性, 并确认无影响安全的身心疾病, 拍摄前请在家自行练习水中睁眼能力。</p>
-                    <p>5.拍摄共计三套服装，包含一件暗夜精灵系列泳衣及两套可选择的拍摄现场服装道具,  自备服装可提前</p>
+                    <p>5.拍摄共计三套服装，包含一件暗夜精灵系列泳衣及两套可选择的拍摄现场服装道具,  自备服装可提前联系迪卡侬官方由专业摄影团队确认可行后使用。</p>
                 </div>
                 <p>二等奖：第2-3名</p>
                 <p>价值2000 元专业游泳教程一套，共计两名。</p>
@@ -249,7 +249,8 @@
                     <dt>第二阶段（7.15-7.31）【投票开启】：</dt>
                     <dd>1.点击首页“照片墙”，进入个人海报页并分享该页面链接，即可邀请好友点赞投票。</dd>
                     <dd>2.截至北京时间2019年7月31日24时止，点赞排名前6位的用户，可获得迪卡侬送出的相应奖品。</dd>
-                    <dd><span>（*每个微信ID仅可中奖1次，本次活动仅限中国大陆地区消</span></dd>
+                    <dd>3.每个微信ID仅可给同一张海报投票1次。</dd>
+                    <dd><span>（*每个微信ID仅可中奖1次，本次活动仅限中国大陆地区消费者参与）</span></dd>
                 </dl>
                 <p>
                     <input type="checkbox" id="agreement" name="agreement" />
