解决： 1. 一键复制 2. 活动规则

--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
                 <div>
                     <h3 class="words word-tmall_title">复制淘口令，打开天猫</h3>
                     <p>復|制这段描述￥o5VaY0wrOCD￥后到☞淘♂寳♀☜</p>
+                    <a class="btns btn-pop_copy" href="javascript:;" title="一键复制">一键复制</a>
                 </div>
             </div>
             <a class="btns btn-close btn-pop_close" href="javascript:;" title="关闭" data-close=".pop-tmall">关闭</a>
