--- a/vote.html
+++ b/vote.html
@@ -25,15 +25,13 @@
     <div class="wrap">
         <section class="stage stage-vote flex flex-direction_column flex-justify_center flex-align_center">
             <dl class="vote-candidate">
-                <dt><img class="vote-candidate_avatar" src="" alt="头像" /></dt>
-                <dd><span class="vote-candidate_name"><!-- js create element --></span></dd>
+                <dt class="vote-candidate_avatar"><!-- js create element --></dt>
+                <dd class="vote-candidate_name"><!-- js create element --></dd>
             </dl>
-            <div class="vote-playbill">
-                <img class="vote-playbill_img" src="" />
-            </div>
+            <div class="vote-playbill"><!-- js create element --></div>
             <ul>
                 <li class="vote-btn"><!-- js create element --></li>
-                <li class="vote-bank"><!-- js create element --></li>
+                <li class="vote-rank"><!-- js create element --></li>
             </ul>
             <a class="btns btn-find" href="javascript:;" title="发现你的美">发现你的美</a>
         </section>
