解决： 1. 分享文案

--- a/vote.html
+++ b/vote.html
@@ -24,23 +24,16 @@
 <body>
     <div class="wrap">
         <section class="stage stage-vote flex flex-direction_column flex-justify_center flex-align_center">
-            <dl class="vote-candidate">
+            <dl class="vote-candidate flex flex-align_center">
                 <dt class="vote-candidate_avatar"><!-- js create element --></dt>
                 <dd class="vote-candidate_name"><!-- js create element --></dd>
             </dl>
             <div class="vote-playbill"><!-- js create element --></div>
-            <ul>
+            <ul class="vote-info flex flex-justify_center flex-align_center">
                 <li class="vote-btn"><!-- js create element --></li>
                 <li class="vote-rank"><!-- js create element --></li>
             </ul>
             <a class="btns btn-find" href="javascript:;" title="发现你的美">发现你的美</a>
-        </section>
-    </div>
-    <div class="pop">
-        <section class="pop-error" data-close=".pop-error">
-            <div class="pop-error_box flex flex-justify_center flex-align_center">
-                <span class="words word-tips_error">Opps，您的图片无法识别试试背景更干净的美照吧~</span>
-            </div>
         </section>
     </div>
     <script src="js/public/common.js"></script>
